--- a/publications.html
+++ b/publications.html
@@ -108,6 +108,23 @@
 	<table border=0 cellpadding=4>
 
 		<tr>
+			<td><img src="./publication/cviu-23.png", style="border-radius:5% 5% 5% 5%;border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Collaborative Three-Stream Transformers for Video Captioning</font>
+					<br>
+					<font color="#000000" >H. Wang, L. Zhang, H. Fan, and T. Luo</font>
+					<br>
+					<font>Computer Vision and Image Understanding(<b>CVIU</b>), 2023, accepted.</font>
+					<br>
+					paper
+					<br>
+				</p>
+			
+			</td>
+		</tr>
+
+		<tr>
 			<td><img src="./publication/animaltrack.gif", style="border-radius:5% 5% 5% 5%;border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
@@ -310,7 +327,7 @@
 	<table border=0 cellpadding=4>
 
 		<tr>
-			<td><img src="./publication/coming.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td><img src="./publication/nsa.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 					<font style="font-weight:bold">Unsupervised Domain Adaptive Detection with Network Stability Analysis</font>
@@ -326,7 +343,7 @@
 		</tr>
 
 		<tr>
-			<td><img src="./publication/coming.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td><img src="./publication/unist.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 					<font style="font-weight:bold"> Two Birds, One Stone: A Unified Framework for Joint Learning of Image and Video Style Transfers</font>
@@ -342,7 +359,7 @@
 		</tr>
 
 		<tr>
-			<td><img src="./publication/coming.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td><img src="./publication/captioning-iccv-23.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 					<font style="font-weight:bold">Accurate and Fast Compressed Video Captioning</font>
