--- a/group.html
+++ b/group.html
@@ -63,7 +63,7 @@
 				</center>
 			</td>
 
-			<td width=150>
+			<!-- <td width=150>
 				<center>
 					<img src="./groupimgs/LeT.jpg", height="125">
 					<br>
@@ -71,8 +71,8 @@
 					<br>
 					<font >MS student</font>
 				</center>
-			</td>
-
+			</td> -->
+<!-- 
 			<td width=150>
 				<center>
 					<img src="./groupimgs/female.png", height="125">
@@ -81,7 +81,7 @@
 					<br>
 					<font >TAMS student</font>
 				</center>
-			</td>
+			</td> -->
 
 			
 		</tr>
@@ -89,22 +89,29 @@
 	</table>
 
 
-	<!-- <br>
+	<br>
 	<hr>
 	<br>
 
 	<font size="4" color="#034f84"><b>Alumni</b></font>
 	<br>
-	
+
+	<TABLE border=0 cellpadding=1>
+		<TR><TD width=100><b>Name</b></TD> <TD width=200><b>Degree</b></TD> <TD width=70><b>Year</b></TD> <TD><b>Next stop</b></TD> </TR>
+		<TR><TD><b>Thanh Le</b></TD> <TD>MS</TD> <TD>2023</TD> <TD>PhD student at UNT</TD> </TR>
+		<TR><TD><b>Helen Li</b></TD> <TD>TAMS student (female)</TD> <TD>2023</TD> <TD> </TD> </TR>
+	</TABLE>
+
+<!-- 	
     <ul style="margin-top:5px;">
 	
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font size="4" style="line-height: 120%;"><b>Thanh Le</b></font>
+				<font size="4" style="line-height: 120%;"><b>Thanh Le</b>, MS, 2022 (next stop -> PhD student at UNT)</font>
 			</p>
 		</li>
 		
-    </ul> -->
+    </ul>  -->
 
 	
 	
