--- a/publications.html
+++ b/publications.html
@@ -352,7 +352,7 @@
 					<br>
 					<font>IEEE/CVF International Conference on Computer Vision (<b>ICCV</b>), 2023.</font>
 					<br>
-					paper &nbsp; code
+					<a href="https://arxiv.org/abs/2304.11335" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/NevSNev/UniST" target="_blank"><font color="#0099ff">code</font></a>
 					<br>
 				</p>
 			</td>
