--- a/publications.html
+++ b/publications.html
@@ -36,6 +36,38 @@
 
 	<table border=0 cellpadding=4>
 
+		<tr>
+			<td><img src="./publication/dmt.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Deficiency-Aware Masked Transformer for Video Inpainting</font>
+					<br>
+					<font color="#000000" >Y. Yu, H. Fan, and L. Zhang</font>
+					<br>
+					<font>arXiv:2307.08629, 2023. </font>
+					<br>
+					<a href="https://arxiv.org/abs/2307.08629" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/yeates/DMT" target="_blank"><font color="#0099ff">code</font></a>  
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/magic.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">MaGIC: Multi-modality Guided Image Completion</font>
+					<br>
+					<font color="#000000" >Y. Yu, H. Wang, T. Luo, H. Fan, and L. Zhang</font>
+					<br>
+					<font>arXiv:2307.08629, 2023. </font>
+					<br>
+					<a href="https://arxiv.org/abs/2305.11818" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/yeates/MaGIC" target="_blank"><font color="#0099ff">code</font></a> &nbsp; <a href="http://www.yongshengyu.com/MaGIC-Page/" target="_blank"><font color="#0099ff">project</font></a>
+					<br>
+				</p>
+			</td>
+		</tr>
+
 		 <tr>
 			<td><img src="./publication/semo.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
