--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
-		<!-- <li><font style="font-weight:bold; line-height: 120%">2023-08:</font> Our PIDray (<a href="https://arxiv.org/abs/2211.10763" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/lutao2021/PIDray" target="_blank"><font><font color="#0099ff">code-data</font></font></a>) on prohibited item detection is accepted to IJCV.</li> -->
+		<li><font style="font-weight:bold; line-height: 120%">2023-08:</font> Our PIDray (<a href="https://arxiv.org/abs/2211.10763" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/lutao2021/PIDray" target="_blank"><font><font color="#0099ff">code-data</font></font></a>) on prohibited item detection is accepted to IJCV.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-08:</font> Check out our DMT (<a href="https://arxiv.org/abs/2307.08629" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/yeates/DMT" target="_blank"><font><font color="#0099ff">code</font></font></a>) for state-of-the-art video inpainting.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-07:</font> A paper on video captioning is accepted to Computer Vision and Image Understanding.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-07:</font> Four papers (pdf/code,  
