--- a/publications.html
+++ b/publications.html
@@ -115,6 +115,13 @@
 				</p>
 			</td>
 		</tr>
+	</table>
+	
+	<br>
+	<font size="4" color="#034f84"><b>Journal Papers</b></font>
+	<br>
+
+	<table border=0 cellpadding=4>
 
 		<tr>
 			<td><img src="./publication/pid.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
@@ -124,20 +131,13 @@
 					<br>
 					<font color="#000000" >L. Zhang, L. Jiang, R. Ji, and H. Fan</font>
 					<br>
-					<font>	arXiv:2211.10763, 2022. </font>
+					<font>International Journal of Computer Vision (<b>IJCV</b>), 2023, accepted. </font>
 					<br>
 					<a href="https://arxiv.org/abs/2211.10763" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/lutao2021/PIDray" target="_blank"><font color="#0099ff">code-data</font></a>
 					<br>
 				</p>
 			</td>
 		</tr>
-	</table>
-	
-	<br>
-	<font size="4" color="#034f84"><b>Journal Papers</b></font>
-	<br>
-
-	<table border=0 cellpadding=4>
 
 		<tr>
 			<td><img src="./publication/cviu-23.png", style="border-radius:5% 5% 5% 5%;border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
