--- a/publications.html
+++ b/publications.html
@@ -149,7 +149,7 @@
 					<br>
 					<font>Computer Vision and Image Understanding (<b>CVIU</b>), 2023, accepted.</font>
 					<br>
-					paper
+					<a href="./publication/CVIU-COST-23.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/wanghao14/COST" target="_blank"><font color="#0099ff">code</font></a>
 					<br>
 				</p>
 			
