--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<HR>
 	-->
-	<font size="3" color="red"><b>To prospective students:</b></font> <font size="3"> I am looking for self-motivated PhD students. Please read <a href="./prospective-students.html" target="_blank"><font><font color="#0099ff">HERE</font></font></a>.</font>
+	<font size="3" color="red"><b>To prospective students:</b></font> <font size="3"> I am looking for <b><i>self-motivated</i></b> PhD students. Please read <a href="./prospective-students.html" target="_blank"><font><font color="#0099ff">HERE</font></font></a>.</font>
 	
 	<HR>
 
