--- a/publications.html
+++ b/publications.html
@@ -368,7 +368,7 @@
 					<br>
 					<font>IEEE/CVF International Conference on Computer Vision (<b>ICCV</b>), 2023.</font>
 					<br>
-					paper &nbsp; code
+					<a href="https://arxiv.org/pdf/2308.08182.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/tiankongzhang/NSA" target="_blank"><font color="#0099ff">code</font></a>
 					<br>
 				</p>
 			</td>
