--- a/teaching/23F-6280/index.htm
+++ b/teaching/23F-6280/index.htm
@@ -41,8 +41,295 @@ div img:hover{
 	</center>
 	</p>
 	
-	This page will be updated very soon ...
+	<HR>
 	
+	<p style="margin-top:5px;">
+	<font size="4"> <b>Basic information:</b></font> <br>
+	</p>
+	
+	<p style="text-align:justify">
+	<ul>
+		<li>
+			<font size="4"> Instructor: <a href="https://hengfan2010.github.io/index.html" target="_blank"><font color="#0099ff">Heng Fan</font></a> (heng.fan@unt.edu)</font>
+		</li>
+		<li>
+			<font size="4"> Office: Discovery Park F284 </font>
+		</li>
+		<li>
+			<font size="4"> Office hours: Friday 9:00 am - 11:00 am or by appointment</font>
+		</li>
+		<br>
+		<li>
+			<font size="4"> Lecture time: Friday 11:00 am - 1:50 pm </font>
+		</li>
+		<li>
+			<font size="4"> Classroom: NTDP B190</font>
+		</li>
+		
+	</ul>
+	</p>
+	
+	<HR>
+	
+	<p style="margin-top:5px;">
+	<font size="4"> <b>Course description</b></font>
+	</p>
+	
+	<p style="text-align:justify">
+	<font size="4">This is a research-oriented course that aims at providing latest frontiers in artificial intelligence (AI). It will describe
+		advanced approaches in AI, with a focus on recent deep learning architectures such as convolutional neural networks
+		and Transformer and their applications especially in different computer vision problems including image recognition,
+		object detection, semantic segmentation, visual object tracking, video object detection and segmentation, vision and language, generative models, unsupervised learning, self-supervised learning, etc. Through this course, the students are expected to understand
+		and digest various advanced AI topics in the context of computer vision by many in-class discussion and paper presentations.</font>
+	</p>
+	
+	<HR>
+	
+	<p style="margin-top:5px;">
+	<font size="4"> <b>Textbooks</b></font> 
+	</p>
+	
+	<p style="text-align:justify">
+	<font size="4">This course does not follow any textbooks closely. However, the following textbooks will be useful for this course:</font>
+	<ul>
+		<li>
+			<font size="4"> <i>Deep Learning</i>, by Ian Goodfellow, Yoshua Bengio, and Aaron Courville, 2016. <a href="https://www.deeplearningbook.org/" target="_blank"><font color="#0099ff">online version</font></a></font>
+		</li>
+		<li>
+			<font size="4"> <i>Computer Vision: Algorithms and Applications (the second edition)</i>, by Rick Szeliski, 2022. <a href="https://szeliski.org/Book/" target="_blank"><font color="#0099ff">online version</font></a></font>
+		</li>
+		<li>
+			<font size="4"> <i>Dive into Deep Learning</i>, by Aston Zhang, Zack C. Lipton, Mu Li, and Alex J. Smola, 2019. <a href="https://d2l.ai/index.html" target="_blank"><font color="#0099ff">online version</font></a> <br>(A lot of examples are provided to practice deep learning.)</font>
+		</li>
+		<li>
+			<font size="4"> <i>Neural Networks and Deep Learning</i>, by Michael Nielsen, 2019. <a href="http://neuralnetworksanddeeplearning.com/" target="_blank"><font color="#0099ff">online version</font></a></font>
+		</li>
+		<li>
+			<font size="4"> <i>Introduction to Deep Learning</i>, by Eugene Charniak, 2019. <a href="https://mitpress.mit.edu/books/introduction-deep-learning" target="_blank"><font color="#0099ff">link</font></a></font>
+		</li>
+	</ul>
+	<font size="4">In addition to the textbooks, extra reading materials will be provided as we cover topics. Check out the
+course website regularly for updated reading materials.</font>
+	</p>
+	
+	<HR>
+
+	<p style="margin-top:5px;">
+	<font size="4"> <b>Schedule (<font color="#FF0000">update may be applied</font>)</b></font> 
+	</p>
+	
+	<p style="text-align:justify">
+	<table border = "0" cellspacing="5px">
+		<tr>
+			<td width=400 style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Date</b> </font></td>
+			<td width=600 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Lecture</b> </font></td>
+		</tr> 
+		<tr>
+			<td width=400 style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 1 <br>(8/25)</b> </font></td>
+			<td width=600 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Introduction</b> </font></td>
+		</tr> 
+		<tr>
+			<td width=400 style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 2 <br>(9/1)</b> </font></td>
+			<td width=600 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Neural Network Basics</b> </font></td>
+		</tr> 
+		<tr>
+			<td width=400 style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 3 <br>(9/8)</b> </font></td>
+			<td width=600 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Neural Network Architectures</b> </font></td>
+		</tr> 
+		<tr>
+			<td width=400 style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 4 <br>(9/15)</b> </font></td>
+			<td width=600 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Transformers</b> </font></td>
+		</tr> 
+		<tr>
+			<td colspan="2" width=400 style='width:80.0pt;background:#e6f4e6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				<b>Paper:</b> Swin Transformer: Hierarchical Vision Transformer using Shifted Windows, ICCV, 2021. <br>
+				<b>Presenter:</b> TBD <br><br>
+				<b>Paper:</b> DynamicViT: Efficient Vision Transformers with Dynamic Token Sparsification, NeurIPS, 2021. <br>
+				<b>Presenter:</b> TBD <br><br>
+				<b>Paper:</b> DiffRate : Differentiable Compression Rate for Efficient Vision Transformers, ICCV, 2023. <br>
+				<b>Presenter:</b> TBD
+			 </font></td>
+		</tr> 
+		<tr>
+			<td width=400 style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 5 <br>(9/22)</b> </font></td>
+			<td width=600 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Object detection</b> </font></td>
+		</tr> 
+		<tr>
+			<td colspan="2" width=400 style='width:950.0pt;background:#e6f4e6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				<b>Paper:</b> End-to-End Object Detection with Transformers, ECCV, 2020. <br>
+				<b>Presenter:</b> TBD <br><br>
+				<b>Paper:</b> Sparse R-CNN: End-to-End Object Detection with Learnable Proposals, CVPR, 2021. <br>
+				<b>Presenter:</b> TBD <br><br>
+				<b>Paper:</b> Deformable DETR: Deformable Transformers for End-to-End Object Detection, ICLR, 2021. <br>
+				<b>Presenter:</b> TBD <br><br>
+				<b>Paper:</b> QueryDet: Cascaded sparse query for accelerating high-resolution small object detection, CVPR, 2022. <br>
+				<b>Presenter:</b> TBD
+			 </font></td>
+		</tr> 
+		<tr>
+			<td width=400 style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 6 <br>(9/29)</b> </font></td>
+			<td width=600 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Semantic Segmentation</b> </font></td>
+		</tr> 
+		<tr>
+			<td colspan="2" width=400 style='width:80.0pt;background:#e6f4e6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				<b>Paper:</b> Segmenter: Transformer for Semantic Segmentation, ICCV, 2021. <br>
+				<b>Presenter:</b> TBD <br><br>
+				<b>Paper:</b> Rethinking Semantic Segmentation: A Prototype View, CVPR, 2022. <br>
+				<b>Presenter:</b> TBD <br><br>
+				<b>Paper:</b> CycleMLP: A MLP-like Architecture for Dense Prediction, ICLR, 2022. <br>
+				<b>Presenter:</b> TBD
+			 </font></td>
+		</tr> 
+		<tr>
+			<td width=400 style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 7 <br>(10/6)</b> </font></td>
+			<td width=600 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Tracking</b> </font></td>
+		</tr> 
+		<tr>
+			<td colspan="2" width=400 style='width:80.0pt;background:#e6f4e6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				<b>Paper:</b> CiteTracker: Correlating Image and Text for Visual Tracking, ICCV, 2023. <br>
+				<b>Presenter:</b> TBD <br><br>
+				<b>Paper:</b> Autoregressive Visual Tracking, CVPR, 2023. <br>
+				<b>Presenter:</b> TBD <br><br>
+				<b>Paper:</b> Generalized Relation Modeling for Transformer Tracking, CVPR, 2023. <br>
+				<b>Presenter:</b> TBD
+			 </font></td>
+		</tr>
+		<tr>
+			<td width=400 style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 8 <br>(10/13)</b> </font></td>
+			<td width=600 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Video Object Detection and Segmentation</b> </font></td>
+		</tr> 
+		<tr>
+			<td colspan="2" width=400 style='width:80.0pt;background:#e6f4e6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				<b>Paper:</b> Progressive Sparse Local Attention for Video Object Detection, ICCV, 2019. <br>
+				<b>Presenter:</b> TBD <br><br>
+				<b>Paper:</b> Two-shot Video Object Segmentation, CVPR, 2023. <br>
+				<b>Presenter:</b> TBD <br><br>
+				<b>Paper:</b> XMem: Long-Term Video Object Segmentation with an Atkinson-Shiffrin Memory Model, ECCV, 2022.<br>
+				<b>Presenter:</b> TBD
+			 </font></td>
+		</tr>
+		<tr>
+			<td width=400 style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 9 <br>(10/20)</b> </font></td>
+			<td width=600 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Vision and Language</b> </font></td>
+		</tr> 
+		<tr>
+			<td colspan="2" width=400 style='width:80.0pt;background:#e6f4e6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				<b>Paper:</b> F-VLM: Open-Vocabulary Object Detection upon Frozen Vision and Language Models, ICLR, 2023. <br>
+				<b>Presenter:</b> TBD <br><br>
+				<b>Paper:</b> Turning a CLIP Model into a Scene Text Detector, CVPR, 2023. <br>
+				<b>Presenter:</b> TBD <br><br>
+				<b>Paper:</b> Visual Programming: Compositional visual reasoning without training, CVPR, 2023.<br>
+				<b>Presenter:</b> TBD
+			 </font></td>
+		</tr>
+		<tr>
+			<td width=400 style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 10 <br>(10/27)</b> </font></td>
+			<td width=600 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Generative Models</b> </font></td>
+		</tr> 
+		<tr>
+			<td colspan="2" width=400 style='width:80.0pt;background:#e6f4e6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				<b>Paper:</b> Magic3D: High-Resolution Text-to-3D Content Creation, CVPR, 2023. <br>
+				<b>Presenter:</b> TBD <br><br>
+				<b>Paper:</b> Photorealistic Text-to-Image Diffusion Models with Deep Language Understanding, NeurIPS, 2022. <br>
+				<b>Presenter:</b> TBD <br><br>
+				<b>Paper:</b> DiffusionDet: Diffusion Model for Object Detection, ICCV, 2023.<br>
+				<b>Presenter:</b> TBD
+			 </font></td>
+		</tr>
+		<tr>
+			<td width=400 style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 11 <br>(11/3)</b> </font></td>
+			<td width=600 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Unsupervised Learning</b> </font></td>
+		</tr> 
+		<tr>
+			<td colspan="2" width=400 style='width:80.0pt;background:#e6f4e6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				<b>Paper:</b> Unsupervised Deep Tracking, CVPR, 2019. <br>
+				<b>Presenter:</b> TBD <br><br>
+				<b>Paper:</b> Unsupervised Learning of Depth and Ego-Motion from Video, CVPR, 2017. <br>
+				<b>Presenter:</b> TBD <br><br>
+				<b>Paper:</b> Cut and Learn for Unsupervised Object Detection and Instance Segmentation, CVPR, 2023.<br>
+				<b>Presenter:</b> TBD
+			 </font></td>
+		</tr>
+		<tr>
+			<td width=400 style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 12 <br>(11/10)</b> </font></td>
+			<td width=600 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Self-supervised Learning</b> </font></td>
+		</tr> 
+		<tr>
+			<td colspan="2" width=400 style='width:80.0pt;background:#e6f4e6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				<b>Paper:</b> A Simple Framework for Contrastive Learning of Visual Representations, ICML, 2020. <br>
+				<b>Presenter:</b> TBD <br><br>
+				<b>Paper:</b> DropMAE: Masked Autoencoders with Spatial-Attention Dropout for Tracking Tasks, CVPR, 2023. <br>
+				<b>Presenter:</b> TBD <br><br>
+				<b>Paper:</b> Joint-task Self-supervised Learning for Temporal Correspondence, NeurIPS, 2019.<br>
+				<b>Presenter:</b> TBD
+			 </font></td>
+		</tr>
+		<tr>
+			<td width=400 style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 13 <br>(11/17)</b> </font></td>
+			<td width=600 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Dynamic Neural Network</b> </font></td>
+		</tr> 
+		<tr>
+			<td colspan="2" width=400 style='width:80.0pt;background:#e6f4e6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				<b>Paper:</b> DynamicDet: A Unified Dynamic Architecture for Object Detection, CVPR, 2023. <br>
+				<b>Presenter:</b> TBD <br><br>
+				<b>Paper:</b> Should All Proposals be Treated Equally in Object Detection? ECCV, 2022. <br>
+				<b>Presenter:</b> TBD <br><br>
+				<b>Paper:</b> Learning Policies for Adaptive Tracking with Deep Feature Cascades, ICCV, 2017. <br>
+				<b>Presenter:</b> TBD <br><br>
+				<b>Paper:</b> Not All Images are Worth 16x16 Words: Dynamic Vision Transformers with Adaptive Sequence Length, NeurIPS, 2021. <br>
+				<b>Presenter:</b> TBD
+			 </font></td>
+		</tr> 
+		<tr>
+			<td width=400 style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 14 <br>(11/24)</b> </font></td>
+			<td width=600 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Thanksgiving break (no class)</b> </font></td>
+		</tr> 
+		<tr>
+			<td width=400 style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 15 <br>(12/1)</b> </font></td>
+			<td width=600 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Literature Review</b> </font></td>
+		</tr> 
+		<tr>
+			<td width=400 style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 16 <br>(12/8)</b> </font></td>
+			<td width=600 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Reading day (no class)</b> </font></td>
+		</tr> 
+	</table>
+	</p>
+	
+	<HR>
+	
+	<p style="margin-top:5px;">
+	<font size="4"> <b>Grading policy</b></font> 
+	</p>
+	
+	<p style="text-align:justify">
+	<font size="4">Grading will be based on the following components:</font>
+	<ul>
+		<li>
+			<font size="4"> Paper presentation: 40%</font>
+		</li>
+		<li>
+			<font size="4"> Paper review: 30%</font>
+		</li>
+		<li>
+			<font size="4"> In-class discussion: 10%</font>
+		</li>
+		<li>
+			<font size="4"> Literature review: 20%</font>
+		</li>
+	</ul>
+	</p>
+	
+	<!-- <HR>
+	
+	<p style="margin-top:5px;">
+	<font size="4"> <b>Acknowledgment</b></font> 
+	</p>
+	
+	<p style="text-align:justify">
+	<font size="4">This course is inspired by the following courses.</font>
+	</p> -->
+	
+	<HR>
 	
 </div>
 
