--- a/teaching/23F-6280/index.htm
+++ b/teaching/23F-6280/index.htm
@@ -173,11 +173,11 @@ course website regularly for updated reading materials.</font>
 		<tr>
 			<td colspan="2" width=400 style='width:80.0pt;background:#e6f4e6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<b>Paper:</b> Segmenter: Transformer for Semantic Segmentation, ICCV, 2021. <br>
-				<b>Presenter:</b> TBD <br><br>
+				<b>Presenter:</b> <font color="blue">Hanzhi Zhang</font> <br><br>
 				<b>Paper:</b> Rethinking Semantic Segmentation: A Prototype View, CVPR, 2022. <br>
-				<b>Presenter:</b> TBD <br><br>
+				<b>Presenter:</b> <font color="blue">Shaohua Dong</font> <br><br>
 				<b>Paper:</b> CycleMLP: A MLP-like Architecture for Dense Prediction, ICLR, 2022. <br>
-				<b>Presenter:</b> TBD
+				<b>Presenter:</b> <font color="blue">Shaohua Dong</font>
 			 </font></td>
 		</tr> 
 		<tr>
@@ -229,11 +229,11 @@ course website regularly for updated reading materials.</font>
 		<tr>
 			<td colspan="2" width=400 style='width:80.0pt;background:#e6f4e6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<b>Paper:</b> Magic3D: High-Resolution Text-to-3D Content Creation, CVPR, 2023. <br>
-				<b>Presenter:</b> TBD <br><br>
+				<b>Presenter:</b> <font color="blue">Gaoyi Chen</font> <br><br>
 				<b>Paper:</b> Photorealistic Text-to-Image Diffusion Models with Deep Language Understanding, NeurIPS, 2022. <br>
-				<b>Presenter:</b> TBD <br><br>
+				<b>Presenter:</b> <font color="blue">Haiyan Sun</font> <br><br>
 				<b>Paper:</b> DiffusionDet: Diffusion Model for Object Detection, ICCV, 2023.<br>
-				<b>Presenter:</b> TBD
+				<b>Presenter:</b> <font color="blue">Xinpeng Xie</font>
 			 </font></td>
 		</tr>
 		<tr>
@@ -243,9 +243,9 @@ course website regularly for updated reading materials.</font>
 		<tr>
 			<td colspan="2" width=400 style='width:80.0pt;background:#e6f4e6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<b>Paper:</b> Unsupervised Deep Tracking, CVPR, 2019. <br>
-				<b>Presenter:</b> TBD <br><br>
+				<b>Presenter:</b> <font color="blue">Sekhar Lanka</font> <br><br>
 				<b>Paper:</b> Unsupervised Learning of Depth and Ego-Motion from Video, CVPR, 2017. <br>
-				<b>Presenter:</b> TBD <br><br>
+				<b>Presenter:</b> <font color="blue">Ruiyao Liu</font> <br><br>
 				<b>Paper:</b> Cut and Learn for Unsupervised Object Detection and Instance Segmentation, CVPR, 2023.<br>
 				<b>Presenter:</b> TBD
 			 </font></td>
@@ -257,11 +257,11 @@ course website regularly for updated reading materials.</font>
 		<tr>
 			<td colspan="2" width=400 style='width:80.0pt;background:#e6f4e6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<b>Paper:</b> A Simple Framework for Contrastive Learning of Visual Representations, ICML, 2020. <br>
-				<b>Presenter:</b> TBD <br><br>
+				<b>Presenter:</b> <font color="blue">Ruiyao Liu</font> <br><br>
 				<b>Paper:</b> DropMAE: Masked Autoencoders with Spatial-Attention Dropout for Tracking Tasks, CVPR, 2023. <br>
-				<b>Presenter:</b> TBD <br><br>
+				<b>Presenter:</b> <font color="blue">Xinpeng Xie</font> <br><br>
 				<b>Paper:</b> Joint-task Self-supervised Learning for Temporal Correspondence, NeurIPS, 2019.<br>
-				<b>Presenter:</b> TBD
+				<b>Presenter:</b> <font color="blue">Gaoyi Chen</font>
 			 </font></td>
 		</tr>
 		<tr>
