--- a/teaching/23F-6280/index.htm
+++ b/teaching/23F-6280/index.htm
@@ -143,7 +143,7 @@ course website regularly for updated reading materials.</font>
 		<tr>
 			<td colspan="2" width=400 style='width:80.0pt;background:#e6f4e6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<b>Paper:</b> Swin Transformer: Hierarchical Vision Transformer using Shifted Windows, ICCV, 2021. <br>
-				<b>Presenter:</b> TBD <br><br>
+				<b>Presenter:</b> <font color="blue">Thomas Trebat</font> <br><br>
 				<b>Paper:</b> DynamicViT: Efficient Vision Transformers with Dynamic Token Sparsification, NeurIPS, 2021. <br>
 				<b>Presenter:</b> TBD <br><br>
 				<b>Paper:</b> DiffRate : Differentiable Compression Rate for Efficient Vision Transformers, ICCV, 2023. <br>
@@ -157,9 +157,9 @@ course website regularly for updated reading materials.</font>
 		<tr>
 			<td colspan="2" width=400 style='width:950.0pt;background:#e6f4e6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<b>Paper:</b> End-to-End Object Detection with Transformers, ECCV, 2020. <br>
-				<b>Presenter:</b> TBD <br><br>
+				<b>Presenter:</b> <font color="blue">Chenyang Yu</font> <br><br>
 				<b>Paper:</b> Sparse R-CNN: End-to-End Object Detection with Learnable Proposals, CVPR, 2021. <br>
-				<b>Presenter:</b> TBD <br><br>
+				<b>Presenter:</b> <font color="blue">Mike Degany</font> <br><br>
 				<b>Paper:</b> Deformable DETR: Deformable Transformers for End-to-End Object Detection, ICLR, 2021. <br>
 				<b>Presenter:</b> TBD <br><br>
 				<b>Paper:</b> QueryDet: Cascaded sparse query for accelerating high-resolution small object detection, CVPR, 2022. <br>
@@ -201,9 +201,9 @@ course website regularly for updated reading materials.</font>
 		<tr>
 			<td colspan="2" width=400 style='width:80.0pt;background:#e6f4e6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<b>Paper:</b> Progressive Sparse Local Attention for Video Object Detection, ICCV, 2019. <br>
-				<b>Presenter:</b> TBD <br><br>
+				<b>Presenter:</b> <font color="blue">Chenyang Yu</font> <br><br>
 				<b>Paper:</b> Two-shot Video Object Segmentation, CVPR, 2023. <br>
-				<b>Presenter:</b> TBD <br><br>
+				<b>Presenter:</b> <font color="blue">Yiran Li</font> <br><br>
 				<b>Paper:</b> XMem: Long-Term Video Object Segmentation with an Atkinson-Shiffrin Memory Model, ECCV, 2022.<br>
 				<b>Presenter:</b> TBD
 			 </font></td>
@@ -247,7 +247,7 @@ course website regularly for updated reading materials.</font>
 				<b>Paper:</b> Unsupervised Learning of Depth and Ego-Motion from Video, CVPR, 2017. <br>
 				<b>Presenter:</b> <font color="blue">Ruiyao Liu</font> <br><br>
 				<b>Paper:</b> Cut and Learn for Unsupervised Object Detection and Instance Segmentation, CVPR, 2023.<br>
-				<b>Presenter:</b> TBD
+				<b>Presenter:</b> <font color="blue">Yiran Li</font>
 			 </font></td>
 		</tr>
 		<tr>
@@ -275,7 +275,7 @@ course website regularly for updated reading materials.</font>
 				<b>Paper:</b> Should All Proposals be Treated Equally in Object Detection? ECCV, 2022. <br>
 				<b>Presenter:</b> TBD <br><br>
 				<b>Paper:</b> Learning Policies for Adaptive Tracking with Deep Feature Cascades, ICCV, 2017. <br>
-				<b>Presenter:</b> TBD <br><br>
+				<b>Presenter:</b> <font color="blue">Mike Degany</font> <br><br>
 				<b>Paper:</b> Not All Images are Worth 16x16 Words: Dynamic Vision Transformers with Adaptive Sequence Length, NeurIPS, 2021. <br>
 				<b>Presenter:</b> TBD
 			 </font></td>
