--- a/group.html
+++ b/group.html
@@ -27,120 +27,28 @@
 <div class="central_body">
 	
 	
-	<font size="4" color="#034f84"><b>Current members</b></font>
+	<font size="4" color="#034f84"><b>PhD Students</b></font>
 	<br>
-
-	<table border=0 cellpadding=4>
-		
-		<tr>
-			<td width=150>
-				<center>
-					<img src="./personal/hfan-2022.jpeg", height="125">
-					<br>
-					<a href="https://hengfan2010.github.io/" target="_blank"><font color="#0099ff" style="font-weight:bold">Heng Fan</font></a>
-					<br>
-					<font >Assistant Professor</font>
-				</center>
-			</td>
-
-			<td width=150>
-				<center>
-					<img src="./groupimgs/LiuX.jpeg", height="125">
-					<br>
-					<font style="font-weight:bold">Xiaoqiong Liu</font>
-					<br>
-					<font >PhD student</font>
-				</center>
-			</td>
-
-			<td width=150>
-				<center>
-					<img src="./groupimgs/DongS.jpg", height="125">
-					<br>
-					<font style="font-weight:bold"><a href="https://scholar.google.com/citations?user=5iSEcFkAAAAJ&hl=en" target="https://scholar.google.com/citations?user=5iSEcFkAAAAJ&hl=en"><font color="#0099ff" style="font-weight:bold">Shaohua Dong</font></a></font>
-					<br>
-					<font >PhD student</font>
-				</center>
-			</td>
-
-			<!-- <td width=150>
-				<center>
-					<img src="./groupimgs/LeT.jpg", height="125">
-					<br>
-					<font style="font-weight:bold">Thanh Le</font>
-					<br>
-					<font >MS student</font>
-				</center>
-			</td> -->
-<!-- 
-			<td width=150>
-				<center>
-					<img src="./groupimgs/female.png", height="125">
-					<br>
-					<font style="font-weight:bold">Helen Li</font>
-					<br>
-					<font >TAMS student</font>
-				</center>
-			</td> -->
-
-			
-		</tr>
-
-	</table>
+	<ul style="margin-top:5px;">
+		<li> <font style="font-weight:bold; line-height: 120%">Shaohua Dong</font> (2023-)</li>
+		<li> <font style="font-weight:bold; line-height: 120%">Xiaoqiong Liu</font> (2022-)</li>
+    </ul>
 
 
-	<br>
 	<hr>
-	<br>
 
 	<font size="4" color="#034f84"><b>Alumni</b></font>
 	<br>
+	<ul style="margin-top:5px;">
+		<li> <font style="font-weight:bold; line-height: 120%">Thanh Le</font>, MS, 2023 (next stop->PhD student at UNT)</li>
+		<li> <font style="font-weight:bold; line-height: 120%">Helen Li</font>, K-12 student (female) from TAMS, 2023</li>
+    </ul>
 
-	<TABLE border=0 cellpadding=1>
+	<!-- <TABLE border=0 cellpadding=1>
 		<TR><TD width=100><b>Name</b></TD> <TD width=200><b>Degree</b></TD> <TD width=70><b>Year</b></TD> <TD><b>Next stop</b></TD> </TR>
 		<TR><TD><b>Thanh Le</b></TD> <TD>MS</TD> <TD>2023</TD> <TD>PhD student at UNT</TD> </TR>
 		<TR><TD><b>Helen Li</b></TD> <TD>TAMS student (female)</TD> <TD>2023</TD> <TD> </TD> </TR>
-	</TABLE>
-
-<!-- 	
-    <ul style="margin-top:5px;">
-	
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font size="4" style="line-height: 120%;"><b>Thanh Le</b>, MS, 2022 (next stop -> PhD student at UNT)</font>
-			</p>
-		</li>
-		
-    </ul>  -->
-
-	
-	
-	<!-- <font size="4" color="#034f84"><b>MS Students</b></font>
-	<br>
-	
-    <ul style="margin-top:5px;">
-	
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font size="4" style="line-height: 120%;"><b>Thanh Le</b></font>
-			</p>
-		</li>
-		
-    </ul>
-
-	<font size="4" color="#034f84"><b>TAMS High School Students</b></font>
-	<br>
-	
-    <ul style="margin-top:5px;">
-	
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font size="4" style="line-height: 120%;"><b>Helen Li</b></font>
-			</p>
-		</li>
-		
-    </ul> -->
-	
+	</TABLE> -->
 
 </div>
 
