--- a/group.html
+++ b/group.html
@@ -30,7 +30,7 @@
 	<font size="4" color="#034f84"><b>PhD Students</b></font>
 	<br>
 	<ul style="margin-top:5px;">
-		<li> <font style="font-weight:bold; line-height: 120%">Shaohua Dong</font> (2023-)</li>
+		<li> <font style="font-weight:bold; line-height: 120%; color: #0099ff"><a href="https://scholar.google.com/citations?user=5iSEcFkAAAAJ&hl=en" target="_blank">Shaohua Dong</a></font> (2023-)</li>
 		<li> <font style="font-weight:bold; line-height: 120%">Xiaoqiong Liu</font> (2022-)</li>
     </ul>
 
