--- a/teaching/23F-6280/index.htm
+++ b/teaching/23F-6280/index.htm
@@ -145,9 +145,9 @@ course website regularly for updated reading materials.</font>
 				<b>Paper:</b> Swin Transformer: Hierarchical Vision Transformer using Shifted Windows, ICCV, 2021. <br>
 				<b>Presenter:</b> <font color="blue">Thomas Trebat</font> <br><br>
 				<b>Paper:</b> DynamicViT: Efficient Vision Transformers with Dynamic Token Sparsification, NeurIPS, 2021. <br>
-				<b>Presenter:</b> TBD <br><br>
+				<b>Presenter:</b> <font color="blue">Zexuan Meng</font> <br><br>
 				<b>Paper:</b> DiffRate : Differentiable Compression Rate for Efficient Vision Transformers, ICCV, 2023. <br>
-				<b>Presenter:</b> TBD
+				<b>Presenter:</b> <font color="blue">Hanzhi Zhang</font>
 			 </font></td>
 		</tr> 
 		<tr>
@@ -161,9 +161,9 @@ course website regularly for updated reading materials.</font>
 				<b>Paper:</b> Sparse R-CNN: End-to-End Object Detection with Learnable Proposals, CVPR, 2021. <br>
 				<b>Presenter:</b> <font color="blue">Mike Degany</font> <br><br>
 				<b>Paper:</b> Deformable DETR: Deformable Transformers for End-to-End Object Detection, ICLR, 2021. <br>
-				<b>Presenter:</b> TBD <br><br>
+				<b>Presenter:</b> <font color="blue">Thomas Trebat</font> <br><br>
 				<b>Paper:</b> QueryDet: Cascaded sparse query for accelerating high-resolution small object detection, CVPR, 2022. <br>
-				<b>Presenter:</b> TBD
+				<b>Presenter:</b> <font color="blue">Zexuan Meng</font>
 			 </font></td>
 		</tr> 
 		<tr>
@@ -189,9 +189,9 @@ course website regularly for updated reading materials.</font>
 				<b>Paper:</b> CiteTracker: Correlating Image and Text for Visual Tracking, ICCV, 2023. <br>
 				<b>Presenter:</b> TBD <br><br>
 				<b>Paper:</b> Autoregressive Visual Tracking, CVPR, 2023. <br>
-				<b>Presenter:</b> TBD <br><br>
+				<b>Presenter:</b> <font color="blue">Yongqi Zhu</font> <br><br>
 				<b>Paper:</b> Generalized Relation Modeling for Transformer Tracking, CVPR, 2023. <br>
-				<b>Presenter:</b> TBD
+				<b>Presenter:</b> <font color="blue">Haiyan Sun</font>
 			 </font></td>
 		</tr>
 		<tr>
@@ -217,9 +217,9 @@ course website regularly for updated reading materials.</font>
 				<b>Paper:</b> F-VLM: Open-Vocabulary Object Detection upon Frozen Vision and Language Models, ICLR, 2023. <br>
 				<b>Presenter:</b> TBD <br><br>
 				<b>Paper:</b> Turning a CLIP Model into a Scene Text Detector, CVPR, 2023. <br>
-				<b>Presenter:</b> TBD <br><br>
+				<b>Presenter:</b> <font color="blue">Farahnaz Hosseini</font> <br><br>
 				<b>Paper:</b> Visual Programming: Compositional visual reasoning without training, CVPR, 2023.<br>
-				<b>Presenter:</b> TBD
+				<b>Presenter:</b> <font color="blue">Farahnaz Hosseini</font>
 			 </font></td>
 		</tr>
 		<tr>
@@ -273,7 +273,7 @@ course website regularly for updated reading materials.</font>
 				<b>Paper:</b> DynamicDet: A Unified Dynamic Architecture for Object Detection, CVPR, 2023. <br>
 				<b>Presenter:</b> TBD <br><br>
 				<b>Paper:</b> Should All Proposals be Treated Equally in Object Detection? ECCV, 2022. <br>
-				<b>Presenter:</b> TBD <br><br>
+				<b>Presenter:</b> <font color="blue">Yongqi Zhu</font> <br><br>
 				<b>Paper:</b> Learning Policies for Adaptive Tracking with Deep Feature Cascades, ICCV, 2017. <br>
 				<b>Presenter:</b> <font color="blue">Mike Degany</font> <br><br>
 				<b>Paper:</b> Not All Images are Worth 16x16 Words: Dynamic Vision Transformers with Adaptive Sequence Length, NeurIPS, 2021. <br>
