--- a/teaching/23F-6280/index.htm
+++ b/teaching/23F-6280/index.htm
@@ -187,7 +187,7 @@ course website regularly for updated reading materials.</font>
 		<tr>
 			<td colspan="2" width=400 style='width:80.0pt;background:#e6f4e6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<b>Paper:</b> CiteTracker: Correlating Image and Text for Visual Tracking, ICCV, 2023. <br>
-				<b>Presenter:</b> TBD <br><br>
+				<b>Presenter:</b> <font color="blue">Dominic Carrillo</font> <br><br>
 				<b>Paper:</b> Autoregressive Visual Tracking, CVPR, 2023. <br>
 				<b>Presenter:</b> <font color="blue">Yongqi Zhu</font> <br><br>
 				<b>Paper:</b> Generalized Relation Modeling for Transformer Tracking, CVPR, 2023. <br>
@@ -205,7 +205,7 @@ course website regularly for updated reading materials.</font>
 				<b>Paper:</b> Two-shot Video Object Segmentation, CVPR, 2023. <br>
 				<b>Presenter:</b> <font color="blue">Yiran Li</font> <br><br>
 				<b>Paper:</b> XMem: Long-Term Video Object Segmentation with an Atkinson-Shiffrin Memory Model, ECCV, 2022.<br>
-				<b>Presenter:</b> TBD
+				<b>Presenter:</b> <font color="blue">Dominic Carrillo</font>
 			 </font></td>
 		</tr>
 		<tr>
