--- a/teaching/23F-6280/index.htm
+++ b/teaching/23F-6280/index.htm
@@ -205,7 +205,7 @@ course website regularly for updated reading materials.</font>
 				<b>Paper:</b> Two-shot Video Object Segmentation, CVPR, 2023. <br>
 				<b>Presenter:</b> <font color="blue">Yiran Li</font> <br><br>
 				<b>Paper:</b> XMem: Long-Term Video Object Segmentation with an Atkinson-Shiffrin Memory Model, ECCV, 2022.<br>
-				<b>Presenter:</b> <font color="blue">Dominic Carrillo</font>
+				<b>Presenter:</b> 
 			 </font></td>
 		</tr>
 		<tr>
@@ -277,7 +277,7 @@ course website regularly for updated reading materials.</font>
 				<b>Paper:</b> Learning Policies for Adaptive Tracking with Deep Feature Cascades, ICCV, 2017. <br>
 				<b>Presenter:</b> <font color="blue">Mike Degany</font> <br><br>
 				<b>Paper:</b> Not All Images are Worth 16x16 Words: Dynamic Vision Transformers with Adaptive Sequence Length, NeurIPS, 2021. <br>
-				<b>Presenter:</b> TBD
+				<b>Presenter:</b> <font color="blue">Dominic Carrillo</font>
 			 </font></td>
 		</tr> 
 		<tr>
