--- a/projects/AnimalTrack/index.html
+++ b/projects/AnimalTrack/index.html
@@ -105,7 +105,7 @@
 		<p style="margin-top: 8px;">
 		<a href="https://arxiv.org/abs/2205.00158", target="_blank">AnimalTrack: A Benchmark for Multi-Animal Tracking in the Wild</a> <br>
 		Libo Zhang*, Junyuan Gao*, Zhen Xiao, and Heng Fan (*Equal contribution) <br>
-		<i>International Journal of Computer Vision (IJCV), 2022.</i> (accepted)
+		<i>International Journal of Computer Vision (IJCV), 131: 496-513, 2023.</i> (accepted)
 		</p>
       </div>
 	  
