--- a/publications.html
+++ b/publications.html
@@ -232,7 +232,7 @@
 					<br>
 					<font>IEEE/CVF International Conference on Computer Vision (<b>ICCV</b>), 2023.</font>
 					<br>
-					paper &nbsp; code
+					<a href="https://arxiv.org/abs/2309.12867" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/acherstyx/CoCap" target="_blank"><font color="#0099ff">code</font></a>
 					<br>
 				</p>
 			</td>
