--- a/group.html
+++ b/group.html
@@ -27,11 +27,13 @@
 <div class="central_body">
 	
 	
-	<font size="4" color="#034f84"><b>PhD Students</b></font>
+	<font size="4" color="#034f84"><b>Current Students</b></font>
 	<br>
 	<ul style="margin-top:5px;">
-		<li> <font style="font-weight:bold; line-height: 120%; color: #0099ff"><a href="https://scholar.google.com/citations?user=5iSEcFkAAAAJ&hl=en" target="_blank"><font color="#0099ff">Shaohua Dong</font></a></font> (2023-)</li>
-		<li> <font style="font-weight:bold; line-height: 120%">Xiaoqiong Liu</font> (2022-)</li>
+		<li> <font style="font-weight:bold; line-height: 120%; color: #0099ff"><a href="https://scholar.google.com/citations?user=5iSEcFkAAAAJ&hl=en" target="_blank"><font color="#0099ff">Shaohua Dong</font></a></font>, PhD student</li>
+		<li> <font style="font-weight:bold; line-height: 120%">Xiaoqiong Liu</font>, PhD student</li>
+		<li><font style="font-weight:bold; line-height: 120%">Pranay Rishith Bondugula</font>, Master student</li>
+		<li><font style="font-weight:bold; line-height: 120%">Saikiran Motati</font>, TAMS High School student</li>
     </ul>
 
 
