--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<HR>
 	-->
-	<font size="3" color="red"><b>To prospective students:</b></font> <font size="3"> I am looking for <b><i>self-motivated</i></b> PhD students. Please read <a href="./prospective-students.html" target="_blank"><font><font color="#0099ff">HERE</font></font></a>.</font>
+	<font size="3" color="red"><b>To prospective students:</b></font> <font size="3"> I am looking for <b><i>self-motivated</i> PhD students</b> to work on interesting problems in computer and robotic vision, with a focus on <i>general video analysis</i>. 
+		If you're interested, please send me your resume, transcripts, Toefl and/or GRE scores to my e-mail (heng.fan@unt.edu). Publications in related fields are plus.
+		In addition, motivated master and undergraduate students within UNT as well as TAMS high school students are also welcome. If interested, we should talk.</font>
 	
 	<HR>
 
@@ -80,8 +82,8 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
-		<li><font style="font-weight:bold; line-height: 120%">2023-09:</font> A paper (pdf/code) on event boundary detection from video stream is accepted to IJCV.</li>
-		<li><font style="font-weight:bold; line-height: 120%">2023-09:</font> A paper (project) on spatial computing is accepted to <a href="https://sigspatial2023.sigspatial.org/" target="_blank"><font><font color="#0099ff">SIGSPATIAL 2023</font></font></a>.</li>
+		<li><font style="font-weight:bold; line-height: 120%">2023-09:</font> A paper (<a href="https://arxiv.org/abs/2309.15431" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/GX77/LCVSL" target="_blank"><font><font color="#0099ff">code</font></font></a>) on event boundary detection from video stream is accepted to IJCV.</li>
+		<li><font style="font-weight:bold; line-height: 120%">2023-09:</font> A paper (<a href="https://sigspatial.yunhefeng.me/" target="_blank"><font><font color="#0099ff">project</font></font></a>) on spatial computing is accepted to <a href="https://sigspatial2023.sigspatial.org/" target="_blank"><font><font color="#0099ff">SIGSPATIAL 2023</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-08:</font> A paper (<a href="https://www.sciencedirect.com/science/article/abs/pii/S0031320323006118" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/chanchanchan97/ICAFusion" target="_blank"><font><font color="#0099ff">code</font></font></a>) on RGB-Thermal object detection is accepted to Pattern Recognition (PR).</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-08:</font> Our PIDray (<a href="https://arxiv.org/abs/2211.10763" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/lutao2021/PIDray" target="_blank"><font><font color="#0099ff">code-data</font></font></a>) on prohibited item detection is accepted to IJCV.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-08:</font> Check out our DMT (<a href="https://arxiv.org/abs/2307.08629" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/yeates/DMT" target="_blank"><font><font color="#0099ff">code</font></font></a>) for state-of-the-art video inpainting.</li>
