--- a/publications.html
+++ b/publications.html
@@ -145,6 +145,38 @@
 			<td><img src="./publication/ica.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">A Multi-granularity Decade-Long Geo-Tagged Twitter Dataset for Spatial Computing</font>
+					<br>
+					<font color="#000000" >L. Zhang, X. Gu, C. Li, T. Luo, and H. Fan</font>
+					<br>
+					<font>International Journal of Computer Vision (<b>IJCV</b>), 2023, accepted. </font>
+					<br>
+					<a href="https://arxiv.org/abs/2309.15431" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/GX77/LCVSL" target="_blank"><font color="#0099ff">data</font></a>
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/ica.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">A Multi-granularity Decade-Long Geo-Tagged Twitter Dataset for Spatial Computing</font>
+					<br>
+					<font color="#000000" >Y. Feng, Z. Meng, C. Clemmer, H. Fan, and Y. Huang</font>
+					<br>
+					<font>ACM International Conference on Advances in Geographic Information Systems (SIGSPATIAL), 2023 </font>
+					<br>
+					<a href="#" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://sigspatial.yunhefeng.me/" target="_blank"><font color="#0099ff">project-data</font></a>
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/ica.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 					<font style="font-weight:bold">ICAFusion: Iterative Cross-Attention Guided Feature Fusion for Multispectral Object Detection</font>
 					<br>
 					<font color="#000000" >J. Shen, Y. Chen, Y. Liu, X. Zuo, H. Fan, and W. Yang</font>
