--- a/publications.html
+++ b/publications.html
@@ -142,7 +142,7 @@
 	<table border=0 cellpadding=4>
 
 		<tr>
-			<td><img src="./publication/ica.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td><img src="./publication/gebd.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 					<font style="font-weight:bold">A Multi-granularity Decade-Long Geo-Tagged Twitter Dataset for Spatial Computing</font>
@@ -158,7 +158,7 @@
 		</tr>
 
 		<tr>
-			<td><img src="./publication/ica.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td><img src="./publication/sigspatial-23.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 					<font style="font-weight:bold">A Multi-granularity Decade-Long Geo-Tagged Twitter Dataset for Spatial Computing</font>
